# asbool

./: .gitignore  .travis.yml  LICENSE  README.rst  noxfile.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: python.yml
asbool/: __init__.py  converter.py  converter.pyi
tests/: test_it.py
