[bdist_wheel]
universal = 1

[metadata]
name = asbool
author = Atsushi Odagiri
author_email = aodagx@gmail.com
url = https://github.com/aodag/asbool
description = simple converter from ``str`` to ``bool``
long_description = file:README.rst
license = MIT,
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
setup_requires =
    setuptools_scm
install_requires =
    six
[options.extras_require]
testing =
    pytest
    pytest-cov
    pytest-randomly